@@ -15,6 +15,8 @@
     - Partially reversing Ken's "speed up ExtUtils::Manifest" patch
       from 5.51_01 so MANIFEST overrides MANIFEST.SKIP.
     * Fixed PREFIXification so it works on Win32.
+    * Fixed PREFIXification so it works on VMS.
+    - Fixed INSTALLMAN*DIR=none on VMS.
 
     [[ Test Changes ]]
     - Shortening directory levels to accomodate old VMS's
